# machinator

./: README.md  boris.toml
machinator-core/: ambiata-machinator-core.cabal  ambiata-machinator-core.lock-7.10.2
machinator-core/src/Machinator/: Core.hs
machinator-core/src/Machinator/Core/: Data.hs  Graph.hs  Lexer.hs  Parser.hs  Pretty.hs
machinator-core/src/Machinator/Core/Data/: Definition.hs  Position.hs  Token.hs  Version.hs
machinator-core/test/: ambiata-machinator-core-test.cabal  test.hs
machinator-core/test/Test/Machinator/Core/: Arbitrary.hs  Graph.hs  Lexer.hs  Parser.hs
machinator-haskell/: ambiata-machinator-haskell.cabal  ambiata-machinator-haskell.lock-7.10.2
machinator-haskell/src/Machinator/: Haskell.hs
machinator-haskell/src/Machinator/Haskell/Data/: Types.hs
machinator-haskell/src/Machinator/Haskell/Scheme/: Types.hs
machinator-haskell/src/Machinator/Haskell/TH/: Types.hs
machinator-haskell/test/: test-io.hs
machinator-haskell/test/Test/IO/Machinator/Haskell/Scheme/: Types.hs
machinator-purescript/: ambiata-machinator-purescript.cabal  ambiata-machinator-purescript.lock-7.10.2
machinator-purescript/src/Machinator/: Purescript.hs
machinator-purescript/src/Machinator/Purescript/Data/: Types.hs
machinator-purescript/src/Machinator/Purescript/Scheme/: Types.hs
machinator-purescript/src/Machinator/Purescript/Scheme/Types/: Codegen.hs
machinator-purescript/test/: test-io.hs
