name:                  ambiata-machinator-core
version:               1.0.0
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-machinator-core
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           ambiata-machinator-core

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-x-eithert
                     , annotated-wl-pprint             == 0.7.*
                     , containers                      == 0.5.*
                     , semigroups                      == 0.18.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.4        && < 0.6
                     , megaparsec                      == 5.1.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_ambiata_machinator_core

                       Machinator.Core
                       Machinator.Core.Data
                       Machinator.Core.Data.Position
                       Machinator.Core.Data.Token
                       Machinator.Core.Lexer
                       Machinator.Core.Parser
                       Machinator.Core.Pretty

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-disorder-jack  
                     , ambiata-p
                     , ambiata-machinator-core
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , semigroups
                     , text
