name:                  ambiata-machinator-haskell
version:               1.0.0
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-machinator-haskell
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           ambiata-machinator-haskell

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-machinator-core
                     , ambiata-p
                     , ambiata-x-eithert
                     , ambiata-x-templatehaskell
                     , containers
                     , filepath                        == 1.4.*
                     , semigroups                      == 0.18.*
                     , template-haskell                == 2.10.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.5        && < 0.7

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_ambiata_machinator_haskell

                       Machinator.Haskell
                       Machinator.Haskell.Data.Types
                       Machinator.Haskell.Scheme.Types

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-disorder-jack  
                     , ambiata-p
                     , ambiata-machinator-core
                     , ambiata-machinator-haskell
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , semigroups
                     , text
