name:                  ambiata-machinator-core-test
version:               1.0.0
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-machinator-core-test
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           ambiata-machinator-core-test

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-disorder-jack  
                     , ambiata-p
                     , ambiata-machinator-core
                     , containers
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , semigroups
                     , text

  exposed-modules:
                       Test.Machinator.Core.Arbitrary
